--- a/Create_Local_user.yml
+++ b/Create_Local_user.yml
@@ -1,9 +1,10 @@
 ---
-tasks:
-- name: Ensure user bob is present
-  win_user:
-    name: billy
-    password: BillyP4ssw0rd
-    state: present
-    groups:
-      - Users
+- hosts: all
+  tasks:
+  - name: Ensure user bob is present
+    win_user:
+      name: billy
+      password: BillyP4ssw0rd
+      state: present
+      groups:
+        - Users
