--- a/Create_Local_user.yml
+++ b/Create_Local_user.yml
@@ -8,3 +8,9 @@
       state: present
       groups:
         - Users
+  - name: Install pkg git
+    win_chocolatey:
+      name: git
+      state: present
+
+
