--- a/Create_Local_user.yml
+++ b/Create_Local_user.yml
@@ -8,7 +8,7 @@
       state: present
       groups:
         - Users
-  - name: Install pkg git
+  - name: Install pkg chrome
     win_chocolatey:
       name: googlechrome
       state: present
